# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import investmentsRouter from "./investments";
 import transactionsRouter from "./transactions";
 import withdrawalsRouter from "./withdrawals";
 import depositsRouter from "./deposits";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/investments", investmentsRouter);
 router.use("/transactions", transactionsRouter);
 router.use("/withdrawals", withdrawalsRouter);
 router.use("/deposits", depositsRouter);
+router.use("/admin", adminRouter);
 
 export default router;
